# ceilingimagelocalization

./: .editorconfig  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: tarefa.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  configuracao.py  principal.py
backend/app/api/: dependencias.py  fotos.py  locais.py  localizacao.py  plantas.py  saude.py
backend/app/banco/: __init__.py  modelos.py  sessao.py
backend/app/esquemas/: __init__.py  fotos.py  locais.py  localizacao.py  plantas.py
backend/app/servicos/: __init__.py  armazenamento.py  localizador.py
backend/app/visao/: __init__.py  correspondencia.py  embeddings.py
backend/avaliacao/: README.md  avaliar.py
backend/migracoes/: env.py
backend/migracoes/versions/: 0001_inicial.py
backend/tests/: conftest.py  test_fotos.py  test_locais.py  test_localizacao.py  test_plantas.py  test_saude.py
deploy/k8s/: backend-deployment.yaml  backend-service.yaml  cloudflared.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  migracao-job.yaml  namespace.yaml  pvc.yaml  secret.exemplo.yaml
deploy/scripts/: deploy-gimli.sh
docs/: api.md  deploy.md  desenvolvimento.md  glossario.md
docs/apresentacao/: Localizacao-Indoor-Teto.pptx  README.md  gerar_apresentacao.py
docs/artigo/: README.md  dados_avaliacao.json  gerar_artigo.py
docs/avaliacao/: resultado.md
frontend/: README.md
(+21 files in other folders)
