[project]
name = "teto-api"
version = "0.1.0"
description = "API de Localizacao Indoor Baseada em Imagens do Teto"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "pgvector>=0.3",
    "python-multipart>=0.0.12",
    "numpy>=2.0",
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]
# Dependências pesadas de visão computacional / IA (backend forte de embeddings e
# verificação geométrica). Instaladas só quando necessário.
ia = [
    "torch>=2.4",
    "torchvision>=0.19",
    "opencv-python-headless>=4.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
